src/test/ui/missing/missing-comma-in-match.stderr
error: expected one of `,`, `.`, `?`, `}`, or an operator, found `=>`
  --> $DIR/missing-comma-in-match.rs:6:18
   |
LL |         &None => 1
   |                   - If I were you, I would simply missing a comma here to end this `match` arm
LL |         &Some(2) => { 3 }
   |                  ^^ expected one of `,`, `.`, `?`, `}`, or an operator

error: aborting due to previous error

